refactor: 💡 完成使用 tsoa 重構 managers.controller
